removed driver dependency

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -9,17 +9,20 @@ FROM golang:1.23.2-alpine AS builder
 # smoke test to verify if golang is available
 RUN go version
 
-RUN apk --no-cache add gcc g++ sqlite
+RUN apk --no-cache add gcc g++ 
 
+ARG GO_TAGS
 ARG PROJECT_VERSION
 
 WORKDIR /go/src/demo/
 COPY . ./
 COPY go.mod.txt ./go.mod
+COPY driver-mattn.go.txt ./driver-mattn.go
+COPY driver-modernc.go.txt ./driver-modernc.go
 
 RUN set -Eeux && go mod tidy && go mod download && go mod verify
 
-RUN GOOS=linux CGO_ENABLED=1 go build -trimpath -ldflags="-w -s -X 'main.Version=${PROJECT_VERSION}'" -o app main.go
+RUN GOOS=linux CGO_ENABLED=1 go build -tags $GO_TAGS -trimpath -ldflags="-w -s -X 'main.Version=${PROJECT_VERSION}'" -o app main.go
 
 # Stage 2 
 FROM alpine:3.20.3
