add sqlite driver name option

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -11,9 +11,6 @@ RUN go version
 
 RUN apk --no-cache add gcc g++ 
 
-ARG GO_TAGS
-ARG PROJECT_VERSION
-
 WORKDIR /go/src/demo/
 COPY . ./
 COPY go.mod.txt ./go.mod
@@ -22,7 +19,10 @@ COPY driver-modernc.go.txt ./driver-modernc.go
 
 RUN set -Eeux && go mod tidy && go mod download && go mod verify
 
-RUN GOOS=linux CGO_ENABLED=1 go build -tags $GO_TAGS -trimpath -ldflags="-w -s -X 'main.Version=${PROJECT_VERSION}'" -o app main.go
+ARG GO_TAGS
+ARG PROJECT_VERSION
+
+RUN GOOS=linux CGO_ENABLED=1 go build -tags $GO_TAGS -trimpath -ldflags="-w -s -X 'main.Version=${PROJECT_VERSION}'" -o app .
 
 # Stage 2 
 FROM alpine:3.20.3
